# mariabico-bot

./: .env.example  .gitignore  CLAUDE.md  DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  TEST_ORCHESTRATION_SUMMARY.md  analisecoderabbit_debug.md  docker-compose.yml  docs.md  implementation_plan.md  mariabico_test.session  prd.md  pyproject.toml  pytest.ini  requirements.txt  task.md
.github/workflows/: tests.yml
scripts/: test_telegram.py  update_bot_info.py
src/: __init__.py  config.py  main.py
src/bot/: __init__.py  formatters.py  handlers.py  keyboards.py  validators.py
src/core/: __init__.py  curator.py  deduplicator.py  link_gen.py  scoring.py
src/database/: __init__.py  models.py  schema.py
src/shopee/: __init__.py  auth.py  client.py  queries.py
src/utils/: __init__.py  logger.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: test_curator.py  test_shopee_api.py  test_telegram_handlers.py
tests/unit/: test_auth.py  test_deduplicator.py  test_link_gen.py  test_scoring.py
